feat: add pagination to list endpoint
